--- a/buszy/poc-tsa.html
+++ b/buszy/poc-tsa.html
@@ -38,264 +38,54 @@
 </head>
 
 <style>
-    #cv-bat-subp {
-        height: 10vh;
+    .tsu {
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 24px;
+        padding-left: 6em;
+        padding-right: 6em;
+    }
+    .custom-list-item {
+        display: flex;
+        align-items: center;
+        background: #f1f1f1;
+        border-radius: 40px;
+        padding: 18px 32px;
+        width: 100%;
+        margin: 24px 0;
+        box-sizing: border-box;
+        gap: 18px;
+        font-family: 'Segoe UI', Arial, sans-serif;
     }
 
-    .fl {
-        font-size: 15px;
-        background-color: #000;
+    .line-label {
+        background: #ff3b3b;
         color: #fff;
-        padding: 8px;
-        border-radius: 10px;
-    }
-
-    .footer {
-        display: none;
-    }
-
-
-    .card-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 1rem;
-        margin-top: 1.5rem;
-    }
-
-    .card {
-        border: 1px solid #ddd;
-        border-radius: 25px;
-        padding: 1rem;
-        background-color: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .card .card-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         font-weight: bold;
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-        border-radius: 15px;
+        border-radius: 16px;
+        padding: 6px 18px;
+        font-size: 1.2em;
+        letter-spacing: 1px;
+        margin-right: 8px;
     }
 
-    .card .card-content-art {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
+    .line-name {
+        font-weight: 600;
+        font-size: 1.3em;
+        color: #111;
+        flex: 1;
     }
 
-    .card .card-content-art span {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-    }
-
-    .card .operator-logo {
-        width: 50px;
-        height: auto;
-    }
-
-    .card-text {
-        text-align: left !important;
-    }
-
-    .card-bt {
-        margin-top: 2em;
-    }
-
-    .service-no {
-        background-color: #94d40b;
-        border-radius: 5px;
-        color: #000;
-        font-weight: bold;
-        padding: 5px 10px;
-    }
-
-    .bus-time {
-        display: inline-flex;
-        width: 125px;
-        text-align: center;
-        margin-right: 0em;
-        font-size: 20px;
-        font-weight: bold;
-        margin-top: 2px;
-        margin-bottom: 2px;
-    }
-
-    .bus-stop-code {
-        display: inline-flex;
-        align-items: center;
-        background-color: #94d40b;
-        color: #000;
-        font-weight: bold;
-        font-size: 20px;
-        padding: 5px 4px;
-        border-radius: 5px;
-        gap: 10px;
-        cursor: default;
-    }
-
-    body.dark-mode .bus-stop-code {
-        display: inline-flex;
-        align-items: center;
-        background-color: #7db603;
-        color: #000;
-        font-weight: bold;
-        font-size: 20px;
-        padding: 5px 4px;
-        border-radius: 5px;
-        gap: 10px;
-        cursor: default;
-    }
-
-    .bus-stop-code img {
-        width: 35px;
-        height: auto;
-        cursor: default;
-    }
-
-    .bus-location-section {
-        display: none;
-    }
-
-    #bus-map {
-        margin-bottom: 2em;
-        border-radius: 25px;
-    }
-
-    .bus-stop-code-text,
-    body.dark-mode .bus-stop-code-text {
-        font-size: 25px;
-        font-weight: bold;
-        color: #000;
-        background-color: #fff;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-        padding: 2px 6px;
-        cursor: default;
-    }
-
-    .bus-stop-description,
-    body.dark-mode .bus-stop-description {
-        font-size: 35px;
-        font-weight: bold;
-        margin-left: 12px;
-        cursor: default;
-    }
-
-    .bus-stop-info {
-        display: flex;
-        align-items: center;
-    }
-
-    #collapse-map-btn,
-    #current-location-btn {
-        padding: 10px;
-        margin-bottom: 1em;
-        margin-right: 1em
-    }
-
-
-    body.dark-mode .card {
-        background-color: #2e2e2e;
-        border: 1px solid #2b2b2b33;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    body.dark-mode .card .card-header {
-        background-color: #0000002c;
-        border-radius: 15px;
+    .status-icon {
+        background: #43b02a;
         color: #fff;
-    }
-
-    body.dark-mode .service-no {
-        background-color: #7db603;
-        color: #000;
-    }
-
-    body.dark-mode .leaflet-touch .leaflet-bar a {
-        width: 30px;
-        height: 30px;
-        line-height: 30px;
-        background-color: #2e2e2e;
-    }
-
-    @media (min-width: 1200px) {
-        .col-xl-3 {
-            flex: 0 0 auto;
-            width: 30%;
-        }
-    }
-
-    @media (max-width: 576px) {
-        .fleet-legend {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            justify-content: center;
-            margin-top: 1em;
-            padding-bottom: 1em;
-
-        }
-
-        .fleet-legend span {
-            font-size: 12px;
-        }
-
-        .img-fluid {
-            width: 40px !important;
-            height: auto;
-            object-fit: cover;
-        }
-
-        .card .card-content-art span {
-            font-size: 20px;
-        }
-    }
-
-    @media (max-width: 485px) {
-        .card .card-content-art span {
-            font-size: 17px;
-        }
-
-        .bus-stop-info {
-            flex-direction: column;
-            align-items: flex-start;
-        }
-
-        .bus-stop-description,
-        body.dark-mode .bus-stop-description {
-            font-size: 35px;
-            font-weight: bold;
-            margin-left: 0px;
-            margin-top: 10px;
-            cursor: default;
-        }
-    }
-
-    @media (max-width: 450px) {
-        .btn {
-            width: 35px;
-        }
-
-        #collapse-map-btn,
-        #current-location-btn {
-            width: auto;
-            padding: 10px;
-            margin-bottom: 1em;
-            margin-right: 1em
-        }
-    }
-
-    @media screen and (max-width: 400px) {
-        .pin-msg {
-            font-size: 12px !important;
-            text-align: center;
-            display: flex;
-            align-items: center;
-        }
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.6em;
     }
 </style>
 
@@ -417,7 +207,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Arrival Timings</h1>
+                                    <h1 class="page-title" id="filter-title">Train Service Updates</h1>
                                 </div>
                                 <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
                                     <i class="fa-solid fa-search"
@@ -435,39 +225,45 @@
         </div>
     </section>
 
-    <!-- Container for the map -->
-    <section class="bus-location-section">
-        <div class="container">
-            <button id="collapse-map-btn" class="btn btn-busloc btn-sm" title="Collapse Map">
-                <i class="fa-solid fa-chevron-up"></i>&nbsp;&nbsp;Collapse Map
-            </button>
-            <button id="current-location-btn" class="btn btn-busloc btn-sm" title="Go to Current Location">
-                <i class="fa-solid fa-location-crosshairs"></i>&nbsp;&nbsp;Current Location
-            </button>
-            <div id="bus-map" style="height: 400px; width: 100%;"></div>
-        </div>
+    <section class="tsu">
+        <li class="custom-list-item">
+            <span class="line-label">NSL</span>
+            <span class="line-name">North South Line</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
+
+        <li class="custom-list-item">
+            <span class="line-label">EWL</span>
+            <span class="line-name">East West Line</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
+        <li class="custom-list-item">
+            <span class="line-label">CCL</span>
+            <span class="line-name">Circle Line</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
+        <li class="custom-list-item">
+            <span class="line-label">DTL</span>
+            <span class="line-name">Downtown Line</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
+        <li class="custom-list-item">
+            <span class="line-label">TEL</span>
+            <span class="line-name">Thomson-East Coast Line</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
+        <li class="custom-list-item">
+            <span class="line-label">NEL</span>
+            <span class="line-name">North East Line</span> 
+            <span class="status-icon">&#10003;</span>
+        </li>
+        <li class="custom-list-item">
+            <span class="line-label">LRT</span>
+            <span class="line-name">Light Rail Transit</span>
+            <span class="status-icon">&#10003;</span>
+        </li>
     </section>
 
-
-    <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span style="gap: 2px;"><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
-            </div>
-
-            <!-- Responsive Cards -->
-            <div class="row" id="bus-arrivals-container">
-                <div class="col-12 text-center">
-                    <p id="loading-message" style="display: flex; align-items: center; justify-content: center;">
-                        <span class="spinner-border" role="status" style="margin-right: 1em;"></span>Loading Data...
-                    </p>
-
-                </div>
-            </div>
-        </div>
-    </section>
 
     <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -494,18 +290,7 @@
 
     <script src="../js/utils.js"></script>
 
-    <script src="js/art.js"></script>
-
-    <script>
-        // Collapse map button logic
-        const collapseBtn = document.getElementById('collapse-map-btn');
-        const mapSection = document.querySelector('.bus-location-section');
-        if (collapseBtn && mapSection) {
-            collapseBtn.addEventListener('click', () => {
-                mapSection.style.display = 'none';
-            });
-        }
-    </script>
+    <script src="js/tsa.js"></script>
 
 </body>
 
