2026-03 Cumulative Update for Buszy V3

--- a/buszy/poc-tsa.html
+++ b/buszy/poc-tsa.html
@@ -38,13 +38,13 @@
 </head>
 
 <style>
-    .tsu {
+    /* .tsu {
         max-width: 100%;
         margin: 0 auto;
         padding: 24px;
         padding-left: 6em;
         padding-right: 6em;
-    }
+    } */
     .custom-list-item {
         display: flex;
         align-items: center;
@@ -226,6 +226,7 @@
     </section>
 
     <section class="tsu">
+        <div class="container container-xxl container-mobile container-mobile-header">
         <li class="custom-list-item">
             <span class="line-label">NSL</span>
             <span class="line-name">North South Line</span>
@@ -262,6 +263,7 @@
             <span class="line-name">Light Rail Transit</span>
             <span class="status-icon">&#10003;</span>
         </li>
+        </div>
     </section>
 
 
